[ issue 22 ] fixed. robots.txt handling can now deal with http and https on same site.